@@ -574,6 +574,12 @@ L<reCAPTCHA|HTML::FormFu::Constraint::reCAPTCHA>.
 Also, the L<CallbackOnce|HTML::FormFu::Constraint::CallbackOnce> constraint
 won't work within a Repeatable block, as it wouldn't make much sense.
 
+=head2 Work-arounds
+
+See L<HTML::FormFu::Filter::ForceListValue> to address a problem with 
+L<increment_field_names> disabled, and increading the L<repeat> on the
+server-side.
+
 =head1 SEE ALSO
 
 Is a sub-class of, and inherits methods from
